casestudy completed